--- a/src/conf-sample/exchanges.yml
+++ b/src/conf-sample/exchanges.yml
@@ -9,7 +9,7 @@ blockchaininfo:
     uppercase: true
 
 vircurex:
-    enabled: true
+    enabled: false
     domain: 'vircurex.com'
     https: true
     urlpaths: ['/api/get_highest_bid.json?base={THING_FROM}&alt={THING_TO}', '/api/get_lowest_ask.json?base={THING_FROM}&alt={THING_TO}']
@@ -19,7 +19,7 @@ vircurex:
     uppercase: true
 
 btce:
-    enabled: true
+    enabled: false
     domain: 'btc-e.com'
     https: true
     urlpaths: ['/api/2/{THING_FROM}_{THING_TO}/ticker']
@@ -49,7 +49,7 @@ mtgox:
     uppercase: true
 
 campbx:
-    enabled: true
+    enabled: false
     domain: 'campbx.com'
     https: true
     urlpaths: ['/api/xticker.php']
@@ -63,37 +63,27 @@ cryptsy:
     domain: 'pubapi.cryptsy.com'
     https: false
     urlpaths: ['/api.php?method=marketdatav2']
-    jsonpaths: ['return.markets.{THING_FROM}/{THING_TO}.lasttradeprice']
-    coinlist: ['btc','alf','amc','anc','arg','bqc','bte','btg','buk','cap','cgb','clr','cmc','crc','csc','dgc','dmd','elc','emd','frc','frk','fst','ftc','gdc','glc','glx','hbn','ifc','ixc','kgc','lk7','lky','ltc','mec','mnc','nbl','nec','nmc','nrb','nvc,',phs','ppc','pts','pxc','pyc','qrk','sbc','spt','src','tag','tek','trc','wdc','xjo','xpm','yac','zet']
+    jsonpaths: ['return.markets.DOGE/BTC.lasttradeprice']
+    coinlist: ['btc','dog']
     fiatlist: []
     uppercase: true
 
 bter:
-    enabled: true
+    enabled: false
     domain: 'bter.com'
     https: true
     urlpaths: ['/api/1/ticker/{THING_FROM}_{THING_TO}']
     jsonpaths: ['avg']
-    coinlist: ['btc','ltc','ppc','frc','ftc','cnc','bqc','btb','wdc','ifc','yac','xpm','pts','zcc','dtc','red','cent','zet','src','mec','qrk']
+    coinlist: ['btc','ltc','ppc','frc','ftc','cnc','bqc','btb','wdc']
     fiatlist: ['cny']
     uppercase: false
 
 cryptotrade:
-    enabled: true
+    enabled: false
     domain: 'crypto-trade.com'
     https: true
     urlpaths: ['/api/1/ticker/{THING_FROM}_{THING_TO}']
     jsonpaths: ['data.min_ask', 'data.max_bid']
     coinlist: ['btc','ltc','nmc','xpm','ppc','trc','ftc','dvc','wdc','dgc']
-    fiatlist: ['usd','eur']
+    fiatlist: ['usd','eur'] 
     uppercase: false
-
-coinse:
-    enabled: true
-    domain: 'www.coins-e.com'
-    https: true
-    urlpaths: ['/api/v2/markets/data/']
-    jsonpaths: ['markets.{THING_FROM}_{THING_TO}.marketstat.24h.avg_rate']
-    coinlist: ['btc','alp','amc','anc','bet','bqc','cgb','cin','crc','dem','dtc','elc','elp','emd','frk','ftc','gdc','glc','ifc','kgc','ltc','mec','nan','net','nrb','nvc','orb','ppc','pts','qrk','rec','red','spt','tag','trc','uno','wdc','xnc','xpm','zet']
-    fiatlist: []
-    uppercase: true
